# Navigation-Robot-Using-GD32F130-Processors

./: README.md
ESP32 Control/: CMakeLists.txt  HUGS.c  hugsIO.c
GD32F130C8 Code/Objects/: HUGS.build_log.htm  HUGS_Target 1.dep  bldc.d  comms.d  commshugs.d  commssteering.d  gd32f1x0_adc.d  gd32f1x0_dbg.d  gd32f1x0_dma.d  gd32f1x0_fwdgt.d  gd32f1x0_gpio.d  gd32f1x0_i2c.d  gd32f1x0_misc.d  gd32f1x0_pmu.d  gd32f1x0_rcu.d  gd32f1x0_syscfg.d  gd32f1x0_timer.d  gd32f1x0_usart.d  gd32f1x0_wwdgt.d  it.d  led.d  main.d  setup.d  system_gd32f1x0.d
ROS/ros_workspace/devel/: .catkin  _setup_util.py  setup.sh
ROS/ros_workspace/devel/include/hugs_control/: HugsData.h
ROS/ros_workspace/devel/lib/hugs_control/: hugs_control_node
ROS/ros_workspace/devel/lib/pkgconfig/: hugs_control.pc
ROS/ros_workspace/devel/lib/python3/dist-packages/hugs_control/msg/: _HugsData.py  __init__.py
ROS/ros_workspace/devel/share/common-lisp/ros/hugs_control/msg/: HugsData.lisp  _package.lisp  _package_HugsData.lisp  hugs_control-msg.asd
ROS/ros_workspace/devel/share/gennodejs/ros/hugs_control/msg/: HugsData.js  _index.js
ROS/ros_workspace/devel/share/hugs_control/cmake/: hugs_control-msg-paths.cmake  hugs_controlConfig.cmake
ROS/ros_workspace/devel/share/roseus/ros/hugs_control/: manifest.l
ROS/ros_workspace/devel/share/roseus/ros/hugs_control/msg/: HugsData.l
ROS/ros_workspace/src/hugs_control/: CMakeLists.txt
ROS/ros_workspace/src/hugs_control/msg/: HugsData.msg
ROS/ros_workspace/src/hugs_control/src/: HUGS.cpp  HUGS.h  main.cpp
